[b]2.9.0[/b]
- Added: Restructured live events and streams to improve performance
- Added: Restructured on-demand events and streams to improve performance
- Added: Live DVR stream option added, although rewind not currently possible
- Changed: Team events now display dates on event page
- Fixed: Minor fixes made to stream filtering
- Fixed: Corrected a live event status issue

[b]2.8.8[/b]
- Added: Display score option added to settings for live games
- Added: Click final live games searches for current day on-demand games
- Added: Setting to toggle display of fanart
- Changed: Skip on-demand year filter for faster access
- Changed: Display league with on-demand team name
- Changed: Reorganize stream settings as a separate category

[b]2.8.7[/b]
- Changed: All API calls are now encrypted (https)
- Fixed: Corrected server locations Asia and Europe

[b]2.8.6[/b]
- Added: Indicate home or away feed with asterisk for inactive events
- Added: Filter by HD only or SD only option
- Added: Display basketball image and fanart.jpg
- Added: Display score and period for live games
- Fixed: Also display FINAL after over-time games terminate
- Fixed: IP Exception failure message properly notifies issue
- Fixed: Password is hidden

[b]2.8.5[/b]
- Added: When available indicate home or away feed with asterisk
- Fixed: Display FINAL when live game streams clear

[b]2.8.4[/b]
- Added: Include Coming Soon games in Live feed
- Changed:  Always show full team names in Team archive section
- Changed:  Display TrueLive instead of RTMP and sort HD first

[b]2.8.3[/b]
- Changed: short team names for NBA updated

[b]2.8.2[/b]
- Fixed: iStream SD fixed for live events

[b]2.8.1[/b]
- Added: north america - east canada as a streaming location

[b]2.8.0[/b]
- Removed: ip check removed, got the go-ahead from ballstreams

[b]2.7.1[/b]
- Fixed: ballstreams api change now returning null for streams and empty dates

[b]2.7.0[/b]